--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://github.com/FallenAngel97/dynosign#readme",
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
@@ -29,6 +30,7 @@
     "node-libs-browser": "2.1.0",
     "node-sass": "^4.10.0",
     "react-hot-loader": "^4.3.12",
+    "react-redux": "^6.0.0",
     "sass": "1.15.2",
     "sass-loader": "7.1.0",
     "style-loader": "^0.23.1",
