--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "watch": "webpack-dev-server --hot --inline"
+    "watch": "webpack-dev-server --hot --inline",
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -16,31 +17,31 @@
   },
   "homepage": "https://github.com/FallenAngel97/dynosign#readme",
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "8.0.4",
     "css-loader": "1.0.1",
-    "electron": "^3.0.10",
+    "electron": "^3.1.4",
     "electron-packager": "13.0.0",
     "electron-rebuild": "1.8.2",
     "file-loader": "^2.0.0",
     "node-libs-browser": "2.1.0",
-    "node-sass": "^4.10.0",
-    "react-hot-loader": "^4.3.12",
+    "node-sass": "^4.11.0",
+    "react-hot-loader": "^4.6.5",
     "react-redux": "^6.0.0",
     "sass": "1.15.2",
     "sass-loader": "7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "4.27.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "3.1.10"
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "redux": "^4.0.1"
   }
 }
