--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test:watch": "jest --watch"
   },
   "jest": {
+    "setupFiles": ["jest-canvas-mock" ],
+    "setupFilesAfterEnv": ["<rootDir>/test/setup.js"],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js"
@@ -38,6 +40,7 @@
     "enzyme-adapter-react-16": "^1.9.1",
     "file-loader": "^2.0.0",
     "jest": "^24.1.0",
+    "jest-canvas-mock": "^2.0.0-beta.1",
     "node-libs-browser": "2.1.0",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.6.5",
