--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test:watch": "jest --watch"
   },
   "jest": {
-    "setupFiles": ["jest-canvas-mock" ],
-    "setupFilesAfterEnv": ["<rootDir>/test/setup.js"],
+    "setupFiles": [
+      "jest-canvas-mock"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/test/setup.js"
+    ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js"
@@ -26,36 +30,36 @@
   },
   "homepage": "https://github.com/FallenAngel97/dynosign#readme",
   "devDependencies": {
-    "@babel/core": "^7.3.3",
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "8.0.4",
     "css-loader": "1.0.1",
-    "electron": "^3.1.4",
+    "electron": "^3.1.6",
     "electron-packager": "13.0.0",
     "electron-rebuild": "1.8.2",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.9.1",
+    "enzyme-adapter-react-16": "^1.10.0",
     "file-loader": "^2.0.0",
-    "jest": "^24.1.0",
+    "jest": "^24.3.1",
     "jest-canvas-mock": "^2.0.0-beta.1",
     "node-libs-browser": "2.1.0",
     "node-sass": "^4.11.0",
-    "react-hot-loader": "^4.6.5",
-    "react-redux": "^6.0.0",
+    "react-hot-loader": "^4.8.0",
+    "react-redux": "^6.0.1",
     "sass": "1.15.2",
     "sass-loader": "7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "4.27.1",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": ">=3.1.11"
+    "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "react": "^16.8.2",
+    "react": "^16.8.4",
     "react-color": "^2.17.0",
-    "react-dom": "^16.8.2",
+    "react-dom": "^16.8.4",
     "redux": "^4.0.1"
   }
 }
