--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,9 +1,15 @@
 env:
   browser: true
   es6: true
-extends: standard
+extends: 
+  - standard
+  - plugin:react/recommended
+  - plugin:jest/recommended
 rules:
   semi: 0
+  camelcase:
+    - error
+    - allow: ["UNSAFE_componentDidMount", "UNSAFE_componentWillMount", "UNSAFE_componentWillUnmount"]
 globals:
   Atomics: readonly
   SharedArrayBuffer: readonly
@@ -15,3 +21,4 @@ parserOptions:
   sourceType: module
 plugins:
   - react
+  - jest
