--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "watch": "webpack-dev-server --hot --inline",
+    "watch": "webpack-dev-server --hot --inline --config webpack.dev.js",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "build": "webpack --config webpack.prod.js"
   },
   "jest": {
     "setupFiles": [
@@ -35,6 +36,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "8.0.4",
     "css-loader": "1.0.1",
     "electron": "^3.1.6",
@@ -42,6 +44,14 @@
     "electron-rebuild": "1.8.2",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
+    "eslint": "^5.15.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.3.0",
+    "eslint-plugin-node": "^8.0.1",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^2.0.0",
     "jest": "^24.3.1",
     "jest-canvas-mock": "^2.0.0-beta.1",
@@ -54,9 +64,12 @@
     "style-loader": "^0.23.1",
     "webpack": "4.27.1",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.4",
