--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,16 @@
 language: node_js
 node_js:
-  - "7"
+  - 11.6.0
+cache: npm
+
+script: 
+  - npm test
+  - npm run build
+  - npm run dist
+
+deploy:
+  provider: releases
+  skip-cleanup: true
+  file: dist/dynosign*.AppImage
+  github-token: $GITHUB_TOKEN
+  draft: true
