--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ deploy:
   skip-cleanup: true
   file: dist/dynosign*.AppImage
   github-token: $GITHUB_TOKEN
+  api_key: $GITHUB_TOKEN
   draft: true
