--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
+    "font-manager": "^0.3.0",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
