--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "8.0.4",
     "css-loader": "1.0.1",
-    "electron": "^3.1.6",
+    "electron": "^4.0.8",
     "electron-builder": "^20.39.0",
     "electron-packager": "13.0.0",
     "electron-rebuild": "1.8.2",
@@ -81,6 +81,7 @@
     "react": "^16.8.4",
     "react-color": "^2.17.0",
     "react-dom": "^16.8.4",
+    "react-select": "^2.4.2",
     "redux": "^4.0.1"
   },
   "build": {
