--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "<rootDir>/test/setup.js"
     ],
     "moduleNameMapper": {
+      "electron": "<rootDir>/src/components/tests/mock/electron.js",
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
       "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js"
     }
