--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
   },
   "build": {
     "appId": "dynosign",
+    "releaseType": "release",
     "mac": {
       "category": "public.app-category.photography"
     },
