Windows electron-builder tweaks

--- a/package.json
+++ b/package.json
@@ -100,8 +100,7 @@
       "category": "Graphics"
     },
     "win": {
-      "title": "Dynosign",
-      "msi": true
+      "target": "msi"
     },
     "files": [
       "index.html",
