--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "webpack --config webpack.prod.js",
-    "pack": "electron-rebuild && electron-builder --dir --publish=release",
+    "pack": "electron-rebuild && electron-builder --dir",
     "dist": "electron-builder",
     "doc": "documentation build javascripts/** -f md -o gh-pages/docs/global.md"
   },
@@ -98,9 +98,6 @@
     },
     "linux": {
       "category": "Graphics"
-    },
-    "win": {
-      "target": "msi"
     },
     "files": [
       "index.html",
