--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,10 @@ script:
 notifications:
   email: false
 
+jobs:
+  allow_failures:
+    - os: windows
+
 deploy:
   - provider: releases
     skip-cleanup: true
