--- a/package.json
+++ b/package.json
@@ -69,6 +69,8 @@
     "mini-css-extract-plugin": "^0.5.0",
     "node-libs-browser": "2.1.0",
     "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "prepack-webpack-plugin": "^1.1.2",
     "react-hot-loader": "^4.8.0",
     "react-redux": "^6.0.1",
     "sass": "1.15.2",
@@ -102,6 +104,7 @@
       "category": "Graphics"
     },
     "files": [
+      "!**/node_modules/*",
       "index.html",
       "main.js",
       "package.json",
