--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then rvm use 2.6.0 ; fi
   - gem update --system && gem install bundler -v 2.0.1 --no-document
   #if gems are missing this script will get the missing gems.
-  - cp output*.gif gh-pages/assets/images && cp javascripts/LeftBar/*.svg gh-pages/assets/images
+  - cp output*.gif gh-pages/assets/images && cp javascripts/LeftBar/*.svg gh-pages/assets/images && cp {screen.png,templogo.png} gh-pages/assets/images
   - npm ci
 
 script: 
