--- a/gh-pages/_config.yml
+++ b/gh-pages/_config.yml
@@ -33,6 +33,8 @@ plugins:
 sass:
   sass_dir: assets/css/_sass
 
+plugins:
+  - jekyll-seo-tag
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
