--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   },
   "homepage": "https://github.com/FallenAngel97/dynosign#readme",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
@@ -50,37 +50,37 @@
     "cross-env": "^5.2.0",
     "css-loader": "1.0.1",
     "documentation": "^9.3.1",
-    "electron": "^4.1.4",
-    "electron-builder": "^20.39.0",
+    "electron": "^4.2.2",
+    "electron-builder": "^20.40.2",
     "electron-packager": "13.0.0",
     "electron-rebuild": "1.8.2",
     "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.12.1",
+    "enzyme-adapter-react-16": "^1.13.0",
     "eslint": "^5.16.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jest": "^22.4.1",
+    "eslint-plugin-jest": "^22.5.1",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0",
     "file-loader": "^2.0.0",
     "google-closure-compiler": "^20190301.0.0",
-    "jest": "^24.7.1",
-    "jest-canvas-mock": "^2.0.0-beta.1",
+    "jest": "^24.8.0",
+    "jest-canvas-mock": "^2.1.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-libs-browser": "2.1.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "prepack-webpack-plugin": "^1.1.2",
-    "react-hot-loader": "^4.8.4",
+    "react-hot-loader": "^4.8.5",
     "react-redux": "^6.0.1",
     "sass": "1.15.2",
     "sass-loader": "7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "4.27.1",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.3.1",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
@@ -89,7 +89,7 @@
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-color": "^2.17.1",
+    "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
     "react-localize-redux": "^3.5.3",
     "react-select": "^2.4.3",
