--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "NODE_ENV=development electron .",
     "watch": "webpack-dev-server --hot --inline --config webpack.dev.js",
     "test": "electron-rebuild && cross-env ELECTRON_RUN_AS_NODE=1 electron ./node_modules/.bin/jest",
-    "test:watch": "cross-env ELECTRON_RUN_AS_NODE=1 ./node_modules/.bin/electron ./node_modules/.bin/jest -- --watch .",
+    "test:watch": "cross-env ELECTRON_RUN_AS_NODE=1 ./node_modules/.bin/electron ./node_modules/.bin/jest --watch ProgramEntry SettingsPage TopBar languagepacks HelpPage test",
     "build": "webpack --config webpack.prod.js",
     "pack": "electron-builder --dir",
     "dist": "electron-builder",
