--- a/package.json
+++ b/package.json
@@ -39,60 +39,60 @@
   },
   "homepage": "https://github.com/FallenAngel97/dynosign#readme",
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "8.0.4",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "8.0.6",
     "closure-webpack-plugin": "^2.0.1",
-    "cross-env": "^5.2.0",
-    "css-loader": "1.0.1",
-    "documentation": "^9.3.1",
-    "electron": "^4.2.6",
-    "electron-builder": "^20.44.4",
-    "electron-packager": "13.0.0",
-    "electron-rebuild": "1.8.2",
+    "cross-env": "^6.0.3",
+    "css-loader": "3.2.0",
+    "documentation": "^12.1.2",
+    "electron": "^6.0.12",
+    "electron-builder": "^21.2.0",
+    "electron-packager": "14.0.6",
+    "electron-rebuild": "1.8.6",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jest": "^22.7.2",
-    "eslint-plugin-node": "^8.0.1",
+    "enzyme-adapter-react-16": "^1.15.0",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.14.2",
-    "eslint-plugin-standard": "^4.0.0",
-    "file-loader": "^2.0.0",
-    "google-closure-compiler": "^20190301.0.0",
-    "jest": "^24.8.0",
-    "jest-canvas-mock": "^2.1.0",
-    "mini-css-extract-plugin": "^0.5.0",
-    "node-libs-browser": "2.1.0",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "file-loader": "^4.2.0",
+    "google-closure-compiler": "^20190929.0.0",
+    "jest": "^24.9.0",
+    "jest-canvas-mock": "^2.1.2",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-libs-browser": "2.2.1",
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prepack-webpack-plugin": "^1.1.2",
-    "react-hot-loader": "^4.12.6",
-    "react-redux": "^6.0.1",
-    "sass": "1.15.2",
-    "sass-loader": "7.1.0",
-    "style-loader": "^0.23.1",
-    "webpack": "4.27.1",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2",
-    "webpack-merge": "^4.2.1"
+    "react-hot-loader": "^4.12.15",
+    "react-redux": "^7.1.1",
+    "sass": "1.23.0",
+    "sass-loader": "8.0.0",
+    "style-loader": "^1.0.0",
+    "webpack": "4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
+    "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "electron-store": "^3.3.0",
-    "font-manager": "^0.3.0",
+    "electron-store": "^5.0.0",
+    "fontmanager-redux": "^0.4.0",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^16.10.2",
     "react-color": "^2.17.3",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.10.2",
     "react-localize-redux": "^3.5.3",
-    "react-select": "^2.4.4",
+    "react-select": "^3.0.8",
     "redux": "^4.0.4"
   },
   "build": {
